# MSA_Pairformer

./: .gitignore  .gitignore~  LICENSE  MSA_Pairformer_with_MMseqs2.ipynb  README.md  pyproject.toml  setup.py
Cell_2026_analysis_notebooks/Figure2/: Figure2_E1_categorical_jacobian.py  Figure2_ESMC.ipynb  Figure2_ESMC_6B.ipynb  Figure2_GLM2_categorical_jacobian.ipynb  Figure2_MSAPairformer.ipynb  Figure2_MSATransformer.ipynb  Figure2_fit_ESMC_contact_heads.ipynb
Cell_2026_analysis_notebooks/Figure3/: Figure3ABCD_E1_toxin_antitoxin.ipynb  Figure3ABCD_ESMC_toxin_antitoxin.ipynb  Figure3ABCD_msa_pairformer_toxin_antitoxin.py  Figure3ABCD_msa_pairformer_toxin_antitoxin_pard_only.py  Figure3ABCD_msa_transformer_toxin_antitoxin.py  Figure3ABCD_poet_score.sh  Figure3ABCD_toxin_antitoxin.ipynb  Figure3ABCD_toxin_antitoxin_jacobians.ipynb  Figure3EFG_MP_EM.ipynb  Figure3EFG_MP_PDP_HK_RR.py  Figure3EFG_MP_PDP_MALG_MALK.py  Figure3EFG_MSA_Transformer_DiffPALM_HK_RR.py  Figure3EFG_MSA_Transformer_DiffPALM_MALG_MALK.py  Figure3EFG_pairing.ipynb
MSAPairformer/: attention.py  core.py  custom_typing.py  data_downloader.py  dataset.py  modules.py  outer_product.py  pairwise_operations.py  positional_encoding.py  regression.py  training_utils.py
MSA_Pairformer/: categorical_jacobian.py  chunk_layer.py  core.py  custom_typing.py  data_downloader.py  dataset.py  mmseqs_utils.py  model.py  modules_old.py  outer_product.py  pairwise_operations.py  plotting.py  positional_encoding.py  potts_diffpalm_utils.py  proteingym_utils.py  reformat_weights_triangle_updates.ipynb  regression.py  test.ipynb  training_utils.py  utils.py  weight_init.py
data/complexes/: 1BXR_A_1BXR_B.fas  (+30 more)
notebooks/: ProteinGym_example.ipynb
training_scripts/: train_attn.py  train_base_model.py  train_contacts_presoftmax_diff_attn_all_layers.py  train_contacts_presoftmax_diff_attn_continue_5k.py  train_contacts_presoftmax_diff_attn_continue_5k_no_rel_pos_crop.py  train_diff_attn.py  train_model_05292025.py  train_nonneg_diff_attn.py  train_presoftmax_diff_attn.py
(+44 files in other folders)
