[project]
name = "msa-pairformer"
version = "1.0.0"
description = "MSA Pairformer model repository"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

authors = [
    {name = "Yo Akiyama"}
]

maintainers = [
    {name = "Yo Akiyama", email = "yo_aki@mit.edu"}
]

dependencies = [
    "torch>=2.5.0",
    "numpy>=1.23,<2.0",
    "einops>=0.8.0",
    "einx>=0.3.0",
    "jaxtyping>=0.2.38",
    "tqdm>=4.67.1",
    "biopython>=1.85",
    "scipy>=1.8.0",
    "matplotlib>=3.5.1",
    "scikit-learn>=0.23.2"
]

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["MSA_Pairformer*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["MSA_Pairformer"]